--- a/style.css
+++ b/style.css
@@ -157,12 +157,19 @@ header {
     height: 300px;
 }
 
+.motto h1 {
+    font-family: "Lucida Sans Typewriter","Lucida Console","Bitstream Vera Sans Mono",monospace;
+    text-align: center;
+    padding-left: 25%;
+    font-size: 14px;
+}
+
 
 #home {
     margin-left: 10rem;
     margin-right: 10rem;
     width: auto;
-    height: 850px;
+    height: 950px;
     line-height: 15px;  
 
 }
@@ -175,7 +182,7 @@ header {
     position: absolute;
     padding-left: 15%;
     width: auto;
-    height: 750px;
+    height: 600px;
     opacity: 0.60;
     filter: grayscale(100%);
     padding-right: auto;
@@ -184,7 +191,7 @@ header {
 .ME p {
     text-align: center;
     width: 45%;
-    padding-top: 35%;
+    padding-top: 30%;
     padding-left: 15%;
     padding-right: auto;
     font-size: 14px;
