--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
     background-color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
-    background-image: url(images/GSFC_20171208_Archive_e001982_orig.jpg);   
+    background-image: url(images/GSFC_20171208_Archive_e001982_orig.jpg); 
+    background-size: 125rem;  
     background-repeat: no-repeat;
     background-position: top right;
 }
@@ -246,6 +247,7 @@ header {
     padding: 0;   
     background-repeat: no-repeat;
     background-position: top right;
+    background-size: 175rem;
     margin-right: 0%;
     margin-left: 10rem;
     
